/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java'
    id 'jacoco'
}

group = 'com.oocl.afs'
version = '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

allprojects {
    repositories {
        maven {
            url 'https://maven.aliyun.com/repository/public/'
        }
        mavenCentral()
    }
}

//repositories {
//    mavenCentral()
//}

jacocoTestReport {
    reports {
        xml.required.set(false)
        csv.required.set(false)
        html.required.set(true)
    }
}

dependencies {
    // Use JUnit Jupiter API for testing.
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.3'

    // Use JUnit Jupiter Engine for testing.
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.3'

    // Use Mockito for mocking in tests.
//    testImplementation 'org.mockito:mockito-core:4.8.0'

    // Use AssertJ for fluent assertions in tests.
    testImplementation 'org.assertj:assertj-core:3.24.0'
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}
